[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
rand = { version = "0.8.5", default-features = false }
smol = { version = "2.0.1", default-features = false }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
